--- a/MDN_NOTEBOOK.ipynb
+++ b/MDN_NOTEBOOK.ipynb
@@ -15,6 +15,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('1.18.2', '1.15.0', '1.0.3')"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.__version__, tf.__version__, pd.__version__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate Data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -97,6 +124,13 @@
     "plt.plot(x2,y2,'.',markersize=12, alpha=0.2)\n",
     "plt.xlabel(\"X\")\n",
     "plt.ylabel(\"Y\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train MLP"
    ]
   },
   {
@@ -211,6 +245,13 @@
     "plt.legend([\"Cluster 1\", \"Cluster 2\", \"Random Samples from model mu and sigma\", \"Model Mu\"])\n",
     "plt.xlabel(\"X\")\n",
     "plt.ylabel(\"Y\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train MDN"
    ]
   },
   {
